--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-<a href="/operationtools/searchbugs.html"> 벅스 노래 찾기</a>
+<a href="/operationtools/searchbugs.html"> 🐞 노래 찾기</a>
+<a href="/operationtools/localchart_manager.html"> 로컬 차트 관리자</a>
+<a href="/operationtools/song_scarper_with_proxy.html"> 🐞 곡 정보 수집기</a>
+<a href="/operationtools/chart-backup-2025-08-22.json"> 차트 백업본</a>
 </html>
