--- a/searchbugs.html
+++ b/searchbugs.html
@@ -21,7 +21,7 @@
   <textarea id="input" placeholder="곡명    아티스트명\nGolden    헌트릭스\n..."></textarea>
   <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid #ccc;">
     <h2>커스텀 검색 관리</h2>
-    <p style="color: gray; font-style: italic;">너무 빨리 클릭하면 검색하는 곳이 아파요</p>
+    <p style="color: red; font-style: italic;">너무 빨리 클릭하면 검색하는 곳이 아파요</p>
     <p>URL 템플릿에 <code>%%TITLE%%</code>과 <code>%%ARTIST%%</code>를 사용하여 동적 URL을 만드세요.</p>
     <div style="display: flex; gap: 10px; margin-bottom: 10px;">
       <input type="text" id="custom-search-name" placeholder="검색 이름 (예: 내 사이트)" style="flex: 1; padding: 6px;">
