--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
 <a href="chart-backup-2025-08-22.json"> 차트 백업본</a>
 <br/>
 <a href="csv_base_bpm_camelot_key_base_sort.html">유사곡 정렬</a>
+<br/>
+<a href="music_selector_all_in_one.html">음원 선곡 도우미</a>
 </html>
